--- a/gemrb/GemRB.cfg.noinstall.sample
+++ b/gemrb/GemRB.cfg.noinstall.sample
@@ -262,5 +262,18 @@ PluginsPath=./gemrb/plugins/
 #TouchScrollAreas=1
 
 #####################################################
+#  Touch Gesture Input Parameters                   #
+#  Requires SDL 1.3 or later			    #
+#  All "NumFing" settings must be > 1 and < 5       #
+#  NumFingScroll and NumFingKboard cannot be equal  #
+#####################################################
+
+#NumFingScroll=2
+
+#NumFingKboard=3
+
+#NumFingInfo=2
+
+#####################################################
 #  END                                              #
 #####################################################
