--- a/gemrb/GemRB.cfg.sample.in
+++ b/gemrb/GemRB.cfg.sample.in
@@ -272,5 +272,18 @@ CachePath=./Cache/
 #TouchScrollAreas=1
 
 #####################################################
+#  Touch Gesture Input Parameters                   #
+#  Requires SDL 1.3 or later			    #
+#  All "NumFing" settings must be > 1 and < 5       #
+#  NumFingScroll and NumFingKboard cannot be equal  #
+#####################################################
+
+#NumFingScroll=2
+
+#NumFingKboard=3
+
+#NumFingInfo=2
+
+#####################################################
 #  END                                              #
 #####################################################
