added new options to the manpage

--- a/gemrb.6.in
+++ b/gemrb.6.in
@@ -319,6 +319,19 @@ area. Intended for devices with a touch interface. Disabled by default.
 Toggles use of software keyboard on devices that support one. It pops up when
 text input is required. Disabled by default.
 
+.TP
+.BR NumFingScroll =(2|3|4)
+Number of fingers for multitouch to trigger scrolling. The default is 2.
+
+.TP
+.BR NumFingKboard =(2|3|4)
+Number of fingers for multitouch to open up the software keyboard. The default is 3.
+The value should not be equal to
+.IR NumFingScroll " above."
+
+.TP
+.BR NumFingInfo =(2|3|4)
+Number of fingers for multitouch to emulate a special keypress (alt, tab). The default is 2.
 
 .\"###################################################
 .SH Development parameters:
