Adds a Cocoa wrapper for Mac/iOS. This will eliminate  the Mac dependency on SDL for the main application and  grant access to some OS specific features.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -256,8 +256,9 @@ IF(NOT WIN32)
 ENDIF(NOT WIN32)
 
 IF(APPLE)
-	FIND_LIBRARY(SDL_MAIN_LIBRARY_PATH SDLmain)
 	FIND_LIBRARY(COCOA_LIBRARY_PATH Cocoa)
+	SET (MAC_C_FLAGS "${CMAKE_C_FLAGS} -x objective-c -DTARGET_OS_MAC")
+	SET (CMAKE_C_FLAGS ${MAC_C_FLAGS})
 ENDIF(APPLE)
 
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in
