--- a/gemrb/CMakeLists.txt
+++ b/gemrb/CMakeLists.txt
@@ -1,11 +1,24 @@
 ADD_SUBDIRECTORY( core )
+
+IF(APPLE)
+	SET_SOURCE_FILES_PROPERTIES(
+		CocoaWrapper.h
+		CocoaWrapper.m
+		PROPERTIES LANGUAGE C
+	)
+
+	ADD_EXECUTABLE(gemrb MACOSX_BUNDLE CocoaWrapper.m GemRB.cpp )
+ELSE(APPLE)
+	ADD_EXECUTABLE(gemrb GemRB.cpp )
+ENDIF(APPLE)
+# we need to add gemrb target before processing plugins or COCOA plugins don't work right.
+
 ADD_SUBDIRECTORY( plugins )
 ADD_SUBDIRECTORY( override )
 ADD_SUBDIRECTORY( GUIScripts )
 ADD_SUBDIRECTORY( docs )
 ADD_SUBDIRECTORY( tests )
 
-ADD_EXECUTABLE(gemrb GemRB.cpp )
 SET_TARGET_PROPERTIES(gemrb PROPERTIES INSTALL_RPATH ${LIB_DIR})
 INCLUDE_DIRECTORIES( ${SDL_INCLUDE_DIR} )
 IF(WIN32)
@@ -13,12 +26,12 @@ IF(WIN32)
 ELSE(WIN32)
  IF(APPLE)
 	if (STATIC_LINK)
-		TARGET_LINK_LIBRARIES(gemrb ${SDL_LIBRARY}
-			 ${SDL_MAIN_LIBRARY_PATH} ${COCOA_LIBRARY_PATH} ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT}
+		TARGET_LINK_LIBRARIES(gemrb
+			  ${COCOA_LIBRARY_PATH} ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT}
 			 gemrb_core ${plugins}  -Wl,-all_load)
 	else (STATIC_LINK)
-		TARGET_LINK_LIBRARIES(gemrb gemrb_core ${SDL_LIBRARY}
-			 ${SDL_MAIN_LIBRARY_PATH} ${COCOA_LIBRARY_PATH} ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
+		TARGET_LINK_LIBRARIES(gemrb gemrb_core
+			  ${COCOA_LIBRARY_PATH} ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
 	endif (STATIC_LINK)
  ELSE(APPLE)
   if (STATIC_LINK)
