Extends the cocoa wrapper to SDLVideo. Allows us to  capture OS quit events, cancel them, and dispatch an  SDL_QUIT instead so gemrb can handle the quit request  gracefully.

--- a/gemrb/CMakeLists.txt
+++ b/gemrb/CMakeLists.txt
@@ -8,6 +8,8 @@ IF(APPLE)
 	)
 
 	ADD_EXECUTABLE(gemrb MACOSX_BUNDLE CocoaWrapper.m GemRB.cpp )
+	SET (BUNDLE_LOADER "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.app/Contents/MacOS/${PROJECT_NAME}") # BUNDLE_LOADER is used by plugins needing to extend the cocoa wrapper (SDLVideo).
+	SET(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -bundle_loader ${BUNDLE_LOADER}")
 ELSE(APPLE)
 	ADD_EXECUTABLE(gemrb GemRB.cpp )
 ENDIF(APPLE)
