adds a new cmake LAYOUT for Mac called "library"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,9 @@ ENDIF(PREFIX)
 if (NOT LAYOUT)
 	if (WIN32)
 		set(LAYOUT "home")
-	else (WIN32)
+	elseif (APPLE)
+		set(LAYOUT "library")
+	else (APPLE)
 		set(LAYOUT "fhs")
 	endif (WIN32)
 endif (NOT LAYOUT)
@@ -91,7 +93,7 @@ elseif (${LAYOUT} MATCHES "fhs")
 	SET_PATH( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
 	SET_PATH( SVG_DIR ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/scalable/apps )
 	SET_PATH( MENU_DIR ${CMAKE_INSTALL_PREFIX}/share/applications )
-else (${LAYOUT} MATCHES "opt")
+elseif (${LAYOUT} MATCHES "opt")
 	SET_PATH( LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib )
 	SET_PATH( PLUGIN_DIR ${LIB_DIR}/plugins )
 	SET_PATH( DATA_DIR ${CMAKE_INSTALL_PREFIX}/share/ )
@@ -102,6 +104,18 @@ else (${LAYOUT} MATCHES "opt")
 	SET_PATH( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
 	SET_PATH( SVG_DIR ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/scalable/apps )
 	SET_PATH( MENU_DIR ${CMAKE_INSTALL_PREFIX}/share/applications )
+else (${LAYOUT} MATCHES "library") # mac
+	SET_PATH( APPLICATION_SUPPORT $ENV{HOME}/Library/Application\ Support/GemRB)
+	SET_PATH( LIB_DIR ${APPLICATION_SUPPORT}) #should go in app bundle!
+	SET_PATH( PLUGIN_DIR ${APPLICATION_SUPPORT}/plugins )
+	SET_PATH( DATA_DIR ${APPLICATION_SUPPORT} )
+	SET_PATH( MAN_DIR /usr/share/man/man6 )
+	SET_PATH( BIN_DIR /Applications )
+	SET_PATH( SYSCONF_DIR ${APPLICATION_SUPPORT})
+	SET_PATH( DOC_DIR ${APPLICATION_SUPPORT} )
+	SET_PATH( ICON_DIR ${APPLICATION_SUPPORT}/share/pixmaps )
+	SET_PATH( SVG_DIR ${APPLICATION_SUPPORT}/share/icons/hicolor/scalable/apps )
+	SET_PATH( MENU_DIR ${APPLICATION_SUPPORT}/share/applications )
 endif (${LAYOUT} MATCHES "home")
 
 # check if this is a release version
