fixed compilation for older cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,10 +280,11 @@ CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in
 
 #Plugin addition macro
 MACRO(ADD_GEMRB_PLUGIN plugin_name)
-	CMAKE_PARSE_ARGUMENTS(GEMRB_PLUGIN "COCOA" "" "" ${ARGN})
-	if (GEMRB_PLUGIN_COCOA)
-		#this is an Apple thing
-		if (APPLE)
+	SET (GEMRB_PLUGIN_UNPARSED_ARGUMENTS ${ARGN})
+	if (APPLE AND DEFINED CMAKE_PARSE_ARGUMENTS )
+		CMAKE_PARSE_ARGUMENTS(GEMRB_PLUGIN "COCOA" "" "" ${ARGN})
+		if (GEMRB_PLUGIN_COCOA)
+			#this is an Apple thing
 			SET_SOURCE_FILES_PROPERTIES(
 				CocoaWrapper.m
 				PROPERTIES LANGUAGE C
@@ -291,8 +292,8 @@ MACRO(ADD_GEMRB_PLUGIN plugin_name)
 			message(STATUS "Will link ${plugin_name} plugin to: ${BUNDLE_LOADER}")
 			#SET (CMAKE_C_FLAGS "${MAC_C_FLAGS} -bundle_loader ${BUNDLE_LOADER}")
 			SET (GEMRB_PLUGIN_UNPARSED_ARGUMENTS ${GEMRB_PLUGIN_UNPARSED_ARGUMENTS} CocoaWrapper.m)
-		endif (APPLE)
-	endif (GEMRB_PLUGIN_COCOA)
+		endif (GEMRB_PLUGIN_COCOA)
+	endif (APPLE AND DEFINED CMAKE_PARSE_ARGUMENTS)
 
 	if (STATIC_LINK)
 		ADD_LIBRARY(${plugin_name} STATIC ${GEMRB_PLUGIN_UNPARSED_ARGUMENTS})
