--- a/gemrb/plugins/SDLVideo/CMakeLists.txt
+++ b/gemrb/plugins/SDLVideo/CMakeLists.txt
@@ -1,7 +1,7 @@
 INCLUDE_DIRECTORIES( ${SDL_INCLUDE_DIR} )
 
 IF (APPLE)
-#ADD_GEMRB_PLUGIN (SDLVideo COCOA SDLVideo.cpp)
+ADD_GEMRB_PLUGIN (SDLVideo COCOA SDLVideo.cpp)
 ELSE(APPLE)
 ADD_GEMRB_PLUGIN (SDLVideo SDLVideo.cpp)
 ENDIF (APPLE)
