--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,34 +280,33 @@ CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in
 
 #Plugin addition macro
 MACRO(ADD_GEMRB_PLUGIN plugin_name)
-	SET (GEMRB_PLUGIN_UNPARSED_ARGUMENTS ${ARGN})
-	if (APPLE AND DEFINED CMAKE_PARSE_ARGUMENTS )
-		CMAKE_PARSE_ARGUMENTS(GEMRB_PLUGIN "COCOA" "" "" ${ARGN})
-		if (GEMRB_PLUGIN_COCOA)
-			#this is an Apple thing
+	SET (PLUGIN_BUILD_FILES ${ARGN})
+	if (${ARGV1} STREQUAL "COCOA")
+		LIST(REMOVE_ITEM PLUGIN_BUILD_FILES "COCOA")
+		#this is an Apple thing
+		if (APPLE)
 			SET_SOURCE_FILES_PROPERTIES(
 				CocoaWrapper.m
 				PROPERTIES LANGUAGE C
 			)
 			message(STATUS "Will link ${plugin_name} plugin to: ${BUNDLE_LOADER}")
-			#SET (CMAKE_C_FLAGS "${MAC_C_FLAGS} -bundle_loader ${BUNDLE_LOADER}")
-			SET (GEMRB_PLUGIN_UNPARSED_ARGUMENTS ${GEMRB_PLUGIN_UNPARSED_ARGUMENTS} CocoaWrapper.m)
-		endif (GEMRB_PLUGIN_COCOA)
-	endif (APPLE AND DEFINED CMAKE_PARSE_ARGUMENTS)
+			SET (PLUGIN_BUILD_FILES ${PLUGIN_BUILD_FILES} CocoaWrapper.m)
+		endif (APPLE)
+	endif (${ARGV1} STREQUAL "COCOA")
 
-	if (STATIC_LINK)
-		ADD_LIBRARY(${plugin_name} STATIC ${GEMRB_PLUGIN_UNPARSED_ARGUMENTS})
-		set(plugins "${plugins};${plugin_name}" PARENT_SCOPE)
-	else (STATIC_LINK)
-		ADD_LIBRARY(${plugin_name} MODULE ${GEMRB_PLUGIN_UNPARSED_ARGUMENTS})
-		if (NOT UNSAFE_PLUGIN)
-			TARGET_LINK_LIBRARIES(${plugin_name} gemrb_core ${CMAKE_THREAD_LIBS_INIT})
-		endif (NOT UNSAFE_PLUGIN)
-		INSTALL(TARGETS ${plugin_name} DESTINATION ${PLUGIN_DIR})
-	endif (STATIC_LINK)
-	SET_TARGET_PROPERTIES(${plugin_name} PROPERTIES PREFIX ""
-		INSTALL_RPATH ${LIB_DIR}
-		LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/gemrb/plugins)
+        if (STATIC_LINK)
+                ADD_LIBRARY(${plugin_name} STATIC ${PLUGIN_BUILD_FILES})
+                set(plugins "${plugins};${plugin_name}" PARENT_SCOPE)
+        else (STATIC_LINK)
+                ADD_LIBRARY(${plugin_name} MODULE ${PLUGIN_BUILD_FILES})
+                if (NOT UNSAFE_PLUGIN)
+                        TARGET_LINK_LIBRARIES(${plugin_name} gemrb_core ${CMAKE_THREAD_LIBS_INIT})
+                endif (NOT UNSAFE_PLUGIN)
+                INSTALL(TARGETS ${plugin_name} DESTINATION ${PLUGIN_DIR})
+        endif (STATIC_LINK)
+        SET_TARGET_PROPERTIES(${plugin_name} PROPERTIES PREFIX ""
+                INSTALL_RPATH ${LIB_DIR}
+                LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/gemrb/plugins)
 ENDMACRO(ADD_GEMRB_PLUGIN)
 
 #gemrb overrides macro
