win32: Add option to use stdio rather than conio for output.
The buildbot can't easily capture the console output, so add an option to
disable it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -275,6 +275,13 @@ IF(APPLE)
 	SET (CMAKE_C_FLAGS ${MAC_C_FLAGS})
 ENDIF(APPLE)
 
+IF (MINGW32)
+	SET (WIN32_USE_STDIO Yes)
+ENDIF ()
+if (WIN32_USE_STDIO)
+	SET (NOCOLOR Yes)
+ENDIF()
+
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in
 	${CMAKE_CURRENT_BINARY_DIR}/config.h ESCAPE_QUOTES)
 
@@ -386,6 +393,7 @@ PRINT_OPTION("${NOCOLOR}" "NOCOLOR")
 PRINT_OPTION("${STATIC_LINK}" "STATIC_LINK")
 PRINT_OPTION("${INSOURCEBUILD}" "INSOURCEBUILD")
 PRINT_OPTION("${DISABLE_WERROR}" "DISABLE_WERROR")
+PRINT_OPTION("${WIN32_USE_STDIO}" "WIN32_USE_STDIO")
 message(STATUS "")
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "")
