cmake: Fix behaviour wrt cmake policy CMP0012.
Old versions of cmake interpret
IF(Yes)
by dereferencing a variables 'Yes' (which is unlikely to be a true value). In
particular, if variable 'option' has the value 'Yes', then
IF(${option}"
will evaluate to false.

CMP0012 changes this behaviour (introduced in 2.8.0) but there is no need to
trigger it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -365,11 +365,11 @@ add_custom_target( dist
 
 # pretty-print options macro
 # as of 2.8 cmake does not support anything like EVAL
-MACRO(PRINT_OPTION option name)
+MACRO(PRINT_OPTION option)
 if (${option})
-	message(STATUS "  ${name}: ${option}")
+	message(STATUS "  ${option}: ${${option}}")
 else()
-	message(STATUS "  ${name}: disabled")
+	message(STATUS "  ${option}: disabled")
 endif()
 ENDMACRO(PRINT_OPTION)
 
@@ -389,11 +389,11 @@ message(STATUS "  MENU_DIR: ${MENU_DIR}")
 message(STATUS "")
 message(STATUS "Options:")
 message(STATUS "  LAYOUT: ${LAYOUT}")
-PRINT_OPTION("${NOCOLOR}" "NOCOLOR")
-PRINT_OPTION("${STATIC_LINK}" "STATIC_LINK")
-PRINT_OPTION("${INSOURCEBUILD}" "INSOURCEBUILD")
-PRINT_OPTION("${DISABLE_WERROR}" "DISABLE_WERROR")
-PRINT_OPTION("${WIN32_USE_STDIO}" "WIN32_USE_STDIO")
+PRINT_OPTION(NOCOLOR)
+PRINT_OPTION(STATIC_LINK)
+PRINT_OPTION(INSOURCEBUILD)
+PRINT_OPTION(DISABLE_WERROR)
+PRINT_OPTION(WIN32_USE_STDIO)
 message(STATUS "")
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "")
