cmake: s/MINGW32/MINGW/
Typo, cmake sets MINGW not MINGW32.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -275,7 +275,7 @@ IF(APPLE)
 	SET (CMAKE_C_FLAGS ${MAC_C_FLAGS})
 ENDIF(APPLE)
 
-IF (MINGW32)
+IF (MINGW)
 	SET (WIN32_USE_STDIO Yes)
 ENDIF ()
 if (WIN32_USE_STDIO)
